Fix prompt popup on mobile

--- a/src/prompts-popup.css
+++ b/src/prompts-popup.css
@@ -2,11 +2,11 @@
     display: flex;            /* Use flexbox for layout */
     justify-content: center;  /* Center horizontally */
     align-items: center;      /* Center vertically */
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     right: 0px;
-    bottom: 200px;
+    bottom: 0px;
     pointer-events: none;
     z-index: 5;
   }
